--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_guess_it"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_guess_it_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GuessTheWord"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
