--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
 
 }
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     namespace 'com.example.guesstheword'
@@ -38,6 +39,7 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.material:material:1.4.+'
     def kotlin_version = '1.3.72'
 
@@ -54,4 +56,7 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+
+
+
 }
